<resources>
    <string name="app_name">MangaOu</string>
    <string name="n_a">N/A</string>

    <string name="popular_updates">Popular Updates</string>
    <string name="latest_updates">Latest Updates</string>
    <string name="ongoing">Ongoing</string>
    <string name="completed">Completed</string>
    <string name="rating">Rating</string>
    <string name="genre">Genre</string>
    <string name="reset">Reset</string>
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>
    <string name="title">Title</string>
    <string name="chapters">Chapters</string>
    <string name="release">Release</string>

    <string name="manga">Manga</string>
    <string name="mangas">Mangas</string>

    <string name="chapter">Chapter %s</string>

    <string name="update">%s Update %s</string>
    <string name="updating">%s Updating %s</string>

    <string name="bookmarks">Bookmarks</string>

    <string name="updating_mangas">Updating Mangas</string>


    <string name="download">Download</string>
    <string name="mark_as_read">Mark as read</string>


    <string name="date_today">Today</string>
    <string name="date_yesterday">Yesterday</string>
    <string name="date_days_ago">Days ago</string>

    <string name="error">Error</string>

    <string name="failed">Failed%s</string>

    <string name="latest_chapters">Latest Chapters</string>
    <string name="downloader">Downloader</string>
    <string name="download_complete">Download Complete</string>
    <string name="bookmark_update">Bookmark Update</string>

    <!--Chapter strings!-->
    <string name="release_date">Release Date</string>
    <string name="author">Author</string>
    <string name="artist">Artist</string>
    <string name="series_type">Series Type</string>
    <string name="status">Status</string>
    <string name="popularity">Popularity</string>
    <string name="votes">Votes</string>
    <string name="views">Views</string>
    <string name="synopsis">Synopsis</string>


    <string name="error_network">Error, Please check your network</string>
    <string name="error_fetch">Failed to get Mangas</string>
    <string name="error_not_found">No Mangas found</string>
    <string name="error_download">Error downloading %s</string>

    <string name="any">Any</string>
    <string name="and">And</string>
    <string name="or">Or</string>

    <string name="contains">Contains</string>
    <string name="begins">Begins</string>
    <string name="ends">Ends</string>

    <string name="error_check_connection">Failed!, Please check your connection</string>
    <string name="bookmark_add">Manga bookmarked successfully</string>
    <string name="bookmark_remove">Manga removed from bookmark</string>
    <string name="refresh">Refresh</string>
    <string name="delete">Delete</string>
    <string name="delete_downloads">Delete downloads</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="bookmark">Bookmark</string>
    <string name="downloads">Downloads</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="display_type">Display type</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="settings">Settings</string>
    <string name="order_by">Order By</string>
    <string name="retry">Retry</string>
    <string name="no_mangas_to_be_downloaded">No Mangas to be downloaded</string>
    <string name="chapter_download_complete">All Chapters Downloaded</string>

    <string name="resume">Resume</string>
    <string name="stop_all">Stop all</string>
    <string name="pause">Pause</string>
    <string name="download_error">Download Error</string>
    <string name="downloading_chapters">Downloading Chapters</string>
    <string name="summary">Summary</string>
    <string name="categories">Categories</string>
    <string name="no_recently_read_mangas">No recently read mangas</string>
    <string name="alt_title">Alternative Title</string>
    <string name="type">Type</string>
    <string name="chapter_amount">Chapter Amount</string>
    <string name="genre_inclusion">Genre Inclusion</string>

    <string name="no_title">No Title</string>
    <string name="title_contain">Title Contain</string>
    <string name="author_contain">Author Contain</string>

    <string name="japanese_manga">Japanese Manga</string>
    <string name="korean_manhwa">Korean Manhwa</string>
    <string name="chinese_manhua">Chinese Manhua</string>

    <string name="create">Create</string>
    <string name="total">Total</string>
    <string name="days_365">365 Days</string>
    <string name="a_z">A-Z</string>
    <string name="days_180">180 Days</string>
    <string name="days_90">90 Days</string>
    <string name="days_30">30 Days</string>
    <string name="days_7">7 Days</string>
    <string name="hours_24">24 Hours</string>
    <string name="hours_12">12 Hours</string>
    <string name="hours_6">6 Hours</string>
    <string name="minutes_60">60 Minutes</string>

    <string name="error_try_again">Error, Please try again</string>
    <string name="failed_add_mangas">The mangas could not be added</string>

    <string name="summary_sample"><b><i>Gol D. Roger</i></b> was known as the Pirate King, the strongest and most infamous being to have sailed the Grand Line. The capture and death of Roger by the World Government brought a change throughout the world. His last words before his death revealed the location of the greatest treasure in the world, One Piece. It was this revelation that brought about the Grand Age of Pirates, men who dreamed of finding One Piece (which promises an unlimited amount of riches and fame), and quite possibly the most coveted of titles for the person who found it, the title of the Pirate King.
Enter Monkey D. Luffy, a 17-year-old boy who defies the standard definition of a pirate. Rather than the popular persona of a wicked, hardened, toothless pirate who ransacks villages for fun, Luffy’s reason for being a pirate is one of pure wonder; the thought of an exciting adventure and meeting new and intriguing people, along with finding One Piece. Following in the footsteps of his childhood hero, Luffy and his crew travel across the Grand Line, experiencing crazy adventures, unveiling dark mysteries and battling strong enemies, all in order to reach One Piece.</string>
</resources>
