<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_round_sort_24"
        android:title="@string/sort"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_round_filter_alt_24"
        android:title="@string/filter"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_display"
        android:title="@string/display_type"
        app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_list"
                    android:title="@string/list" />

                <item
                    android:id="@+id/action_grid"
                    android:title="@string/grid" />
            </group>
        </menu>
    </item>

</menu>