<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_search_title"
            style="@style/FilterTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            app:boxBackgroundColor="@android:color/transparent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:boxBackgroundMode="outline"
            tools:visibility="visible">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_search_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/Base.Widget.MaterialComponents.TextInputEditText.SearchEditText"
                tools:text="@string/summary"/>

        </com.google.android.material.textfield.TextInputLayout>

        <include layout="@layout/spinner_power"
            android:layout_weight="1"
            android:id="@+id/spin_title_contain"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal" >

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_search_auth"
            style="@style/FilterTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxBackgroundColor="@android:color/transparent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_search_auth"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/Base.Widget.MaterialComponents.TextInputEditText.SearchEditText"
                tools:text="@string/summary"/>
        </com.google.android.material.textfield.TextInputLayout>

        <include layout="@layout/spinner_power"
            android:id="@+id/spin_auth_contain"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="4dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            style="@style/FilterTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/rating" />

        <me.zhanghai.android.materialratingbar.MaterialRatingBar
            android:id="@+id/rating_rating"
            style="@style/Widget.MaterialRatingBar.RatingBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:isIndicator="false"
            android:numStars="5"
            android:stepSize="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            style="@style/FilterTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/release" />

        <include layout="@layout/spinner_power"
            android:id="@+id/spin_release"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal" >

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextView.HomeTextView"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/chapters" />

        <include layout="@layout/spinner_power"
            android:id="@+id/spin_chapter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>
