<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="com.exzell.mangaplayground.utils.BindingUtils" />

        <variable
            name="manga"
            type="com.exzell.mangaplayground.models.Manga" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.MaterialComponents.Light.MangaPageOverlay"
        android:visibility='@{manga == null ? View.GONE : View.VISIBLE}'
        tools:visibility="visible">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@{manga.title}"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="?attr/colorSecondary"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="One Piece" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image_manga"
            imageTarget="@{null}"
            thumbnailLink="@{manga.thumbnailLink}"
            android:layout_width="0dp"
            android:layout_height="200dp"
            app:layout_constraintDimensionRatio="12:15"
            app:layout_constraintEnd_toEndOf="@id/text_title"
            app:layout_constraintStart_toStartOf="@id/text_title"
            app:layout_constraintTop_toBottomOf="@id/text_title"
            tools:src="@drawable/ic_launcher_foreground" />

        <me.zhanghai.android.materialratingbar.MaterialRatingBar
            android:id="@+id/rating_manga"
            style="@style/Widget.MaterialRatingBar.RatingBar"
            android:isIndicator="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="28dp"
            android:rating="@{(float) manga.rating}"
            android:numStars="5"
            android:stepSize="0.2"
            app:layout_constraintEnd_toEndOf="@id/image_manga"
            app:layout_constraintStart_toStartOf="@id/image_manga"
            app:layout_constraintTop_toBottomOf="@id/image_manga"
            tools:rating="4.9" />

        <ImageView
            android:id="@+id/bookmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="32dp"
            android:minHeight="32dp"
            android:src="@drawable/selector_bookmark"
            app:layout_constraintTop_toBottomOf="@+id/rating_manga"
            app:layout_constraintEnd_toEndOf="@+id/rating_manga"
            app:layout_constraintStart_toStartOf="@+id/rating_manga"
            app:tint="?attr/colorSecondary" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_alt_title"
            content='@{BindingUtils.listToString(manga.altTitle, "\n")}'
            ellipsizeChecker="@{2}"
            title="@{@string/alt_title}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/text_author"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bookmark"
            tools:text="Eiichiro Oda" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_author"
            content='@{manga.author}'
            ellipsizeChecker="@{2}"
            title="@{@string/author}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/text_type"
            app:layout_constraintEnd_toStartOf="@id/text_artist"
            app:layout_constraintHeight_default="wrap"
            app:layout_constraintStart_toEndOf="@id/text_alt_title"
            app:layout_constraintTop_toTopOf="@id/text_alt_title"
            app:layout_constraintVertical_bias="0.0"
            tools:text="Eiichiro Oda" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_artist"
            content='@{manga.artist}'
            ellipsizeChecker="@{2}"
            title="@{@string/artist}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/text_release"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_default="wrap"
            app:layout_constraintStart_toEndOf="@id/text_author"
            app:layout_constraintTop_toTopOf="@id/text_alt_title"
            app:layout_constraintVertical_bias="0.0"
            tools:text="Eiichiro Oda" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_type"
            content='@{manga.type.dispName}'
            title="@{@string/series_type}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/text_status"
            app:layout_constraintStart_toStartOf="@id/text_alt_title"
            app:layout_constraintTop_toBottomOf="@id/text_alt_title"
            app:layout_constraintVertical_bias="0.0"
            tools:text="Japanese Manga" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_status"
            content='@{manga.status}'
            title="@{@string/status}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/text_popularity"
            app:layout_constraintEnd_toStartOf="@id/text_release"
            app:layout_constraintHeight_default="wrap"
            app:layout_constraintStart_toEndOf="@id/text_type"
            app:layout_constraintTop_toTopOf="@id/text_type"
            app:layout_constraintVertical_bias="0.0"
            tools:text="Ongoing" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_release"
            content='@{manga.release == 0 ? @string/n_a : String.valueOf(manga.release)}'
            title="@{@string/release_date}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/text_popularity"
            app:layout_constraintEnd_toEndOf="@id/text_artist"
            app:layout_constraintHeight_default="wrap"
            app:layout_constraintStart_toEndOf="@id/text_status"
            app:layout_constraintTop_toTopOf="@id/text_type"
            app:layout_constraintVertical_bias="0.0"
            tools:text="1998" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_popularity"
            content='@{manga.popularity}'
            title="@{@string/popularity}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toStartOf="@id/text_votes"
            app:layout_constraintHeight_default="wrap"
            app:layout_constraintStart_toStartOf="@id/text_alt_title"
            app:layout_constraintTop_toBottomOf="@id/text_type"
            tools:text="6th" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_votes"
            content='@{String.valueOf(manga.votes)}'
            title="@{@string/votes}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/text_summary"
            app:layout_constraintEnd_toStartOf="@id/text_views"
            app:layout_constraintHeight_default="wrap"
            app:layout_constraintStart_toEndOf="@id/text_popularity"
            app:layout_constraintTop_toTopOf="@id/text_popularity"
            app:layout_constraintVertical_bias="0.0"
            tools:text="150" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_views"
            content='@{manga.views}'
            title="@{@string/views}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/text_summary"
            app:layout_constraintEnd_toEndOf="@id/text_artist"
            app:layout_constraintHeight_default="wrap"
            app:layout_constraintStart_toEndOf="@id/text_votes"
            app:layout_constraintTop_toTopOf="@id/text_popularity"
            app:layout_constraintVertical_bias="0.0"
            tools:text="4.05k" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_summary"
            content='@{manga.summary}'
            ellipsizeChecker="@{5}"
            title="@{@string/synopsis}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:maxLines="5"
            app:layout_constraintBottom_toTopOf="@id/text_category"
            app:layout_constraintEnd_toEndOf="@id/text_artist"
            app:layout_constraintHeight_default="wrap"
            app:layout_constraintStart_toStartOf="@id/text_alt_title"
            app:layout_constraintTop_toBottomOf="@id/text_popularity"
            tools:text="@string/summary_sample" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:background="@android:color/transparent"
            android:text="@string/categories"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_summary" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chips"
            createChips="@{manga}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingHorizontal="2dp"
            android:paddingBottom="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/text_alt_title"
            app:layout_constraintTop_toBottomOf="@id/text_category" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_chapters_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/chapters"
            android:background="@android:color/transparent"
            android:textColor="@color/title_only"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chips" />

        <com.google.android.material.tabs.TabLayout
            android:theme="@style/SimpleTab"
            android:id="@+id/tab_chapters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_chapters_header" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>